[package]
name = "post-clock"
version = "0.1.0"
authors = ["Jonas Malaco <jonas@protocubo.io>"]
edition = "2021"
description = "A clock using the POST codes display"
repository = "https://github.com/jonasmalacofilho/post-clock"
license = "Unlicense"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
capctl = "0.2.2"
libc = "0.2.140"
time = { version = "0.3.20", features = ["local-offset"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
